--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 </div>
             </div>
         </div>
+        <a id="arrow-down" href="#intro-section"><img src="img/arrow-down.png" alt="arrow-down"></a>
     </section>
-
+   
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
