Adding the a elements and the logo

--- a/index.html
+++ b/index.html
@@ -11,20 +11,43 @@
 
 <body>
 
+    <header class="p-3">
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="col-4">
+                    <img id="header-logo" src="img/header-logo.png" alt="header-logo">
+                </div>
+
+                <div class="col-8 text-end">
+                    <a class="text-decoration-none text-uppercase" href="#">home</a>
+                    <a class="text-decoration-none text-uppercase" href="#">products</a>
+                    <a class="text-decoration-none text-uppercase" href="#">contact</a>
+                    <a class="text-decoration-none text-uppercase" href="#">how to find us</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <section id="hero-section" class="text-light">
         <div id="container-fluid">
+
             <div class="row vh-100 align-items-center pb-5">
-                <div class="col-12 text-center">
+
+                <div id="white-text" class="col-12 text-center">
+
                     <img id="hero-logo" src="img/logo.png" alt="coffe logo imaage">
                     <h1 class="display-2 fw-bold">The Home of Coffe</h1>
-                    <p class="lead" style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. </p>
+
                 </div>
             </div>
         </div>
         <a id="arrow-down" href="#intro-section"><img src="img/arrow-down.png" alt="arrow-down"></a>
     </section>
-   
+
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
