--- a/index.html
+++ b/index.html
@@ -48,6 +48,45 @@
         <a id="arrow-down" href="#intro-section"><img src="img/arrow-down.png" alt="arrow-down"></a>
     </section>
 
+
+    <section id="intro-section" class="py-5">
+
+        <div class="container py-5">
+
+            <div class="row justify-content-center">
+                <div class="col-6 text-center py-3">
+                    <h1 class="font-weight-bold">THE BEST COFFE SHOP</h1>
+                    <p class="text-muted lead text-light ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed
+                        do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+
+            <div class="row py-5">
+
+                <div class="col-4 text-center">
+                    <img class="img-fluid py-2" src="img/icon-1.png" alt="icon-1">
+                    <p>Best Beans</p>
+                </div>
+                
+                <div class="col-4 text-center">
+                    <img class="img-fluid py-2" src="img/icon-2.png" alt="icon2">
+                    <p>Qualyty ingredients</p>
+                </div>
+
+                <div class="col-4 text-center">
+                    <img class="img-fluid py-2" src="img/icon-3.png" alt="icon3">
+                    <p>Perfect blend</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
