Adding too more sections

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img class="img-fluid py-2" src="img/icon-1.png" alt="icon-1">
                     <p>Best Beans</p>
                 </div>
-                
+
                 <div class="col-4 text-center">
                     <img class="img-fluid py-2" src="img/icon-2.png" alt="icon2">
                     <p>Qualyty ingredients</p>
@@ -83,6 +83,42 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section id="about-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-5 offset-1 align-self-center">
+                    <h2>Great Text</h2>
+                    <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed
+                        do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.</p>
+                    <button class="btn btn-primary">Find Out More</button>
+                </div>
+                <div class="col-5 offset-1" id="about-bg-1">
+
+                </div>
+
+            </div>
+            <div class="row align-items-center" id="about-bg-2">
+                <div class="col-6">
+
+                </div>
+                <div class="col-6 text-light">
+                    <h2>Fresh beans</h2>
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed
+                        do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.</p>
+                    <button class="btn btn-primary">Find Out More</button>
+                </div>
+            </div>
         </div>
     </section>
 
