--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="about-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-5 offset-1 align-self-center">
+                <div class="col-4 offset-1 align-self-center">
                     <h2>Great Text</h2>
                     <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                         do eiusmod tempor
@@ -99,7 +99,7 @@
                         incididunt ut labore et dolore magna aliqua.</p>
                     <button class="btn btn-primary">Find Out More</button>
                 </div>
-                <div class="col-5 offset-1" id="about-bg-1">
+                <div class="col-6 offset-1" id="about-bg-1">
 
                 </div>
 
@@ -121,6 +121,129 @@
             </div>
         </div>
     </section>
+
+    <section id="menu-section">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-12 text-center py-4">
+                    <h1>Selection from our menu</h1>
+                    <p class="text-muted lead">orem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed
+                        do eiusmod tempor
+                    </p>
+                </div>
+
+            </div>
+            <div class="row text-center">
+                <div class="col-4 my-2">
+                    <img src="img/coffee-item-1.png" alt="coffee-item-1">
+                    <h3>CAKE</h3>
+                    <p class="lead my-4"></p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor
+                    </p>
+                    <button class="btn btn-dark px-3">3.99 $</button>
+
+                </div>
+                <div class="col-4">
+                    <img src="img/coffee-item-2.png" alt="coffee-item-2">
+                    <h3>COFFE</h3>
+                    <p class="lead my-3"></p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor
+                    </p>
+                    <button class="btn btn-dark px-3">1.99 $</button>
+                </div>
+                <div class="col-4">
+                    <img src="img/coffee-item-3.png" alt="coffee-item-3">
+                    <h3>ESPRESSO</h3>
+                    <p class="lead my-3"></p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor
+                    </p>
+                    <button class="btn btn-dark px-3">2.99 $</button>
+                </div>
+                <div class="col-4 my-3">
+                    <img src="img/coffee-item-4.png" alt="coffee-item-4">
+                    <h3>LATTE</h3>
+                    <p class="lead my-3"></p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor
+                    </p>
+                    <button class="btn btn-dark px-3">3.99 $</button>
+                </div>
+                <div class="col-4 my-3">
+                    <img src="img/coffee-item-5.png" alt="coffee-item-5">
+                    <h2>MACARONS</h2>
+                    <p class="lead my-3"></p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor
+                    </p>
+                    <button class="btn btn-dark px-3">3.99 $</button>
+                </div>
+                <div class="col-4 my-3">
+                    <img src="img/coffee-item-6.png" alt="coffee-item-6">
+                    <h2>MACCHIATO</h2>
+                    <p class="lead my-3"></p>
+                    orem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor
+                    </p>
+                    <button class="btn btn-dark px-3">3.99 $</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <SECtion id="contact-info-section">
+        <div class="container-fluid text-light">
+            <div class="row " id="contact-info-bg-1">
+                <div class="col-5 offset-1 p-5">
+                    <h2>YOU ARE WELCOME</h2>
+                    <P>COME ON IN</P>
+                    <br>
+                    <h4>Weekdays</h4>
+                    <p>08PM-12AM</p>
+                    <h4>Weekends</h4>
+                    <p>12PM-02AM</p>
+                </div>
+                <div class="col-6 p-5 " id="contact-info-bg-2">
+                    <h2>Contact</h2>
+                    <br>
+                    <h4>Phone</h4>
+                    <p>+(000) 789 221 221</p>
+                    <br>
+                    <h4>Email</h4>
+                    <p>example@email.com</p>
+                    <br>
+                    <h4>Adress</h4>
+                    <p>New your city</p>
+                </div>
+            </div>
+        </div>
+    </SECtion>
+
+    <section id="map-section"></section>
+
+    <footer>
+        <div class="container-fluid text-light py-3">
+            <div class="row align-items-center" >
+                <div class="col-5 offset-1">
+                    Coffe Shop |@ 2023 All Rights Reserved
+                </div>
+                <div class="col-5 text-end">
+                    <a href="#"><img src="img/facebook-icon.png" alt="facebook-icon"></a>
+                    <a href="#"><img src="img/instagram-icon.png" alt="instagram-icon"></a>
+                    <a href="#"><img src="img/twitter-icon.png" alt="twitter-icon"></a>
+                    <a href="#"><img src="img/phone-icon.png" alt="phone-icon"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="js/jquery-3.7.1.min.js"></script>
