--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </div>
     </div>
 
-    <header class="p-3">
+    <header id="header" class="p-3">
         <div class="container-fluid">
             <div class="row">
 
                 <div class="col-4">
-                    <img id="header-logo" src="img/header-logo.png" alt="header-logo">
+                    <img id="header-logo" src="svg/header-logo.svg" alt="header-logo">
                 </div>
 
                 <div class=" d-none d-md-block col-8 text-end">
@@ -72,7 +72,7 @@
 
                 <div id="white-text" class="col-12 text-center">
 
-                    <img id="hero-logo" src="img/logo.png" alt="coffe logo imaage">
+                    <img id="hero-logo" src="svg/logo.svg" alt="coffe logo imaage">
                     <h1 class="display-2 fw-bold">The Home of Coffe</h1>
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                         do eiusmod tempor
@@ -104,17 +104,17 @@
             <div class="row py-5">
 
                 <div class="col-sm-4 text-center">
-                    <img class="img-fluid py-2" src="img/icon-1.png" alt="icon-1">
+                    <img class="intro-icon img-fluid py-2" src="svg/icon-1.svg" alt="icon-1">
                     <p>Best Beans</p>
                 </div>
 
-                <div class="col-sm-4 text-center">
-                    <img class="img-fluid py-2" src="img/icon-2.png" alt="icon2">
+                <div class=" col-sm-4 text-center">
+                    <img class="intro-icon img-fluid py-2" src="svg/icon-2.svg" alt="icon2">
                     <p>Qualyty ingredients</p>
                 </div>
 
                 <div class="col-sm-4 text-center">
-                    <img class="img-fluid py-2" src="img/icon-3.png" alt="icon3">
+                    <img class="intro-icon  img-fluid py-2" src="svg/icon-3.svg" alt="icon3">
                     <p>Perfect blend</p>
                 </div>
             </div>
@@ -310,13 +310,34 @@
             })
 
             let mobileMenuItems = document.getElementsByClassName("mobile-menu-items")
-                for (let i = 0; i < mobileMenuItems.length; i++) {
-            mobileMenuItems[i].addEventListener("click", function () {
-                mobileMenu.style.display = "none"
+            for (let i = 0; i < mobileMenuItems.length; i++) {
+                mobileMenuItems[i].addEventListener("click", function () {
+                    mobileMenu.style.display = "none"
+                })
+
+            }
+
+            //for header
+
+            let heroSection = document.getElementById("hero-section");
+            let heroSectionHeight = heroSection.clientHeight;
+
+            let header = document.getElementById("header");
+
+            document.addEventListener("scroll", function () {
+
+                if (document.documentElement.scrollTop > heroSectionHeight) {
+                    if (!header.classList.contains("solid-header")) {
+                        header.classList.add("solid-header")
+                    }
+                }else{
+                    if(header.classList.contains("solid-header")){
+                        header.classList.remove("solid-header")
+                    }
+                }
             })
 
-        }
-            })
+        })
 
     </script>
 
