--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffe Website</title>
+
+    <script src="https://kit.fontawesome.com/ba9b103f78.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/leaflet/leaflet.css">
+
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -81,7 +86,13 @@
                 </div>
             </div>
         </div>
-        <a id="arrow-down" href="#intro-section"><img src="img/arrow-down.png" alt="arrow-down"></a>
+        <a id="arrow-down" href="#intro-section">
+            <span class="fa-stack fa-2x">
+                <i class="fa-regular fa-circle fa-stack-2x"></i>
+                <i class="fa-solid fa-check fa-stack-1x"></i>
+
+            </span>
+        </a>
     </section>
 
 
@@ -172,7 +183,7 @@
                         incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit, sed
                         do eiusmod tempor
-                    </p>   
+                    </p>
 
                     <h1></h1>
                 </div>
@@ -271,7 +282,11 @@
         </div>
     </SECtion>
 
-    <section id="map-section"></section>
+    <section id="map-section">
+        <div id="map">
+
+        </div>
+    </section>
 
 
     <footer>
@@ -294,6 +309,7 @@
 
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/leaflet.js"></script>
 
     <script>
 
@@ -312,6 +328,7 @@
             })
 
             let mobileMenuItems = document.getElementsByClassName("mobile-menu-items")
+
             for (let i = 0; i < mobileMenuItems.length; i++) {
                 mobileMenuItems[i].addEventListener("click", function () {
                     mobileMenu.style.display = "none"
@@ -332,12 +349,23 @@
                     if (!header.classList.contains("solid-header")) {
                         header.classList.add("solid-header")
                     }
-                }else{
-                    if(header.classList.contains("solid-header")){
+                } else {
+                    if (header.classList.contains("solid-header")) {
                         header.classList.remove("solid-header")
                     }
                 }
             })
+
+
+            var map = L.map('map').setView([51.505, -0.09], 13);
+
+            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            }).addTo(map);
+
+            L.marker([51.5, -0.09]).addTo(map)
+                .bindPopup('We are here')
+                .openPopup();
 
         })
 
